css/styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
}

.hg-3 {
  padding: 15px;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 400;
}

/***************************
  GRID LAYOUT
***************************/

.grid-container {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto;
  grid-template-areas:
  'header'
  'nav'
  'main';
}

.header {
  grid-area: header;

  color: #fff;
  width: 100%;
  background-color: rgb(96, 97, 177);
}

.main {
  grid-area: main;
  display: grid;
  width: 100%;
  height: 300px;
}

.widget-container-full, .widget-container-half {
  width: 95vw;
}

/***************************
  HEADER
***************************/

.header {
  grid-area: header;
  color: #fff;
  background-color: rgb(96, 97, 177);

  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 12px;
}

.header > h1 {
  flex-grow: 2;
  margin-top: 10px;
}

.header > h1 span {
  font-weight: 100;
}

.header > h1 sup {
  font-size: 0.4em;
  font-weight: 300;
}

.header-bell-icon {
  margin: 5px 20px 0;
  padding-top: 1px;
  position: relative;
}

.header-bell-icon img {
  height: 1.4em;
  transition: transform .2s ease;
}

.header-bell-icon img:hover {
  transform: rotate(-25deg);
}

.notification-alert {
  display: inline-block;
  width: 11px;
  height: 11px;
  background-color: rgb(112, 192, 125);
  position: absolute;
  top: -3%;
  left: 60%;
  border-radius: 50%;
  cursor: pointer;
}

.notification-list {
  display: none;
  flex-direction: column;
  list-style: none;
  width: 200px;
  padding: 0;
  margin: 0;
  position: absolute;
  z-index: 1000;
  font-size: 11px;

  background-color: #fff;
  color: rgb(136, 136, 136);
  margin-right: 18px;
  margin-top: 28px;
  justify-content: space-between;
}

.notification-list li {
  padding: 10px;
  border-bottom: lightgray;
  display: flex;
  justify-content: space-between;
}

.notification-close {
  cursor: pointer;
}

.vertical-line {
  border-left: 1px solid rgba(60, 58, 95, .4);
  height: 60px;
  margin-right: 10px;
}

.header-profile-image {
  width: 3em;
  border-radius: 50%;
  margin-right: 20px;
}

.header h3 {
  font-size: 1em;
  font-weight: 400;
  padding: 5px 25px 5px 0;
}

/***************************
  NAVIGATION
***************************/

.nav {
  grid-area: nav;
  display: flex;
  color: #fff;
  background-color: rgb(60, 58, 95);
}

.nav-list {
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0;
  margin: 0 auto;
}

.nav-item {
  padding: 15px 20px;
  border-bottom: 5px solid transparent;
  opacity: 0.7;
}

.nav img {
  height: 35px;
  width: 35px;
}

.nav-item:hover {
  opacity: 1;
  border-bottom: 5px solid rgb(112, 192, 125);
}

/***************************
  MAIN SECTION
***************************/

.main {
  display: grid;
  color: rgb(136, 136, 136);
}

.main-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 80px;
}

.main-header-headline {
  flex: 1;
  font-size: 22px;
  font-weight: 400;
  text-align: left;
  padding-left: 15px;
}

.main-header-search {
  background-color: rgb(250, 250, 250);
  flex: 3;
  border-left: 1px solid lightgray;
  border-bottom: 1px solid lightgray;
  height: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  border-radius: 0 0 0 5px;
}

.main-header-search > input[type=search] {
  width: 70%;
  max-width: 250px;
  padding: 10px;
  margin-right: 15px;

  border: 1px solid lightgrey;
  border-radius: 4px;
  font-size: 16px;
  float: right;
}

::placeholder {
  color: lightgray;
}

/***************************
  ALERT
***************************/

.alert {
  margin-top: 20px;
  transition: all 2s ease;
  height: 50px
}

.alert-banner {
  display: flex;
  color: #fff;
  width: 95%;
  margin: 0 auto;
  border-radius: 3px;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(96, 97, 177);
  padding: 3px 20px;
  font-size: 14px;
  transition: all .5s ease;
  height: 50px
}

.alert-banner p {
  margin-top: 3px;
  margin-bottom: 3px;
}

.alert-banner-close {
  font-size: 25px;
  margin: 0;
  cursor: pointer;
}

/***************************
  TRAFFIC
***************************/

.traffic-header {
  display: flex;
  align-items: center;
}

.traffic-nav {
  flex-grow: 2;
  text-align: right;
  margin-right: 15px;
  width: 100%;
}

.traffic-nav li {
  display: inline-block;
  padding: 5px 0;
  font-size: 13px;
  font-weight: 600;
}

.traffic-nav li {
  text-decoration: none;
  color: rgb(136, 136, 136);
  padding: 8px 18px;
  margin-right: 5px;
}

.selected {
  background-color: rgb(112, 192, 125);
  color: #fff !important;
  padding: 8px 18px;
  border-radius: 25px;
}

.traffic-nav li:hover, .traffic--nav li:active {
  background-color: rgb(112, 192, 125);
  color: #fff;
  padding: 8px 18px;
  border-radius: 25px;
}

/***************************
  CHARTS
***************************/

.daily {
  border-top: 1px solid lightgray;
}

.mobile {
  border-top: 1px solid lightgray;
}

/***************************
  SOCIAL
***************************/

.social {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
  border-top: 1px solid lightgray;
}

.social h3 {
  width: 100%;
}

.social-container {
  display: flex;
  width: 65%;
  max-width: 340px;
  border: 1px solid lightgray;
  background-color: rgb(250, 250, 250);
  border-radius: 5px;
  margin: 0 auto 20px;
}

.social-container p:first-of-type {
  color: rgb(96, 97, 177);
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 0;
  letter-spacing: 1.3px;
}

.social-container p:last-of-type {
  font-size: 40px;
  margin-bottom: 0;
  margin-top: -20px;
  font-weight: 300;
}

.social-icon {
  margin: 20px;
  width: 75px;
  height: 75px;
  background-color: #7476bb;
  border-radius: 50%;
  fill: #fff;
}
/* ... */

